--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,21 +1,27 @@
 
-# PowerShell 5.0 Image
+# PowerShell 5.0 build worker
 os: WMF 5
 
-# Clone Directory
-clone_folder: C:\Projects\SharePointFever
+# Install required Pester and PSScriptAnalyzer modules
+install:
+  - ps: Install-PackageProvider NuGet -Force | Out-Null
+  - ps: Install-Module psake -Force
+  - ps: Install-Module Pester -Force
+  - ps: Install-Module PSScriptAnalyzer -Force
 
-# Install Pester
-install: 
-- cinst -y pester --version 3.3.14
-
-# Build Number
+# Set version to build number
 version: '{build}'
 
-# Execute build script
-build_script:
-- ps: .\Scripts\build.ps1
+# Build configuration
+configuration: Release
+platform: Any CPU
 
-# Execute test script
+# Execute psake build task
+build_script:
+  - ps: >-
+      Invoke-psake build.psake.ps1 -taskList Build -notr
+
+# Execute psake test and analyze task
 test_script:
-- ps: .\Scripts\test.ps1
+  - ps: >-
+      Invoke-psake build.psake.ps1 -taskList Pester, ScriptAnalyzer -notr
